--- a/index.html
+++ b/index.html
@@ -32,18 +32,20 @@
                 <a class="nav-item" href="#origem">Origem e Local</a>
                 <a class="nav-item" href="#agente">Agente</a>
                 <a class="nav-item" href="#panorama">Panorama</a>
-
                 </div>
+
                 <div id="navbar-list" class="navbar-lista">
                 <a class="nav-item" href="#transmissao">Transmissão</a>
                 <a class="nav-item" href="#diagnostico">Diagnóstico</a>
                 <a class="nav-item" href="#tratamento">Tratamento</a>
                 <a class="nav-item" href="#sintomas">Sintomas</a>
               </div>
+
               <div id="navbar-list" class="navbar-lista">
                 <a class="nav-item" href="#prevencao">Prevenção</a>
                 <a class="nav-item" href="#home">Home</a>
             </div>
+          </div>
             <div>
         </nav>
         <div class="titulo">
